# NER-for-claude

./: README.md  main.py  model.py  pyproject.toml  requirements.txt
mcp_servers/: pdf_ner_server.py
