[project]
name = "indx-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "fastmcp>=2.12.4",
    "hf-xet>=1.1.10",
    "httpx>=0.28.1",
    "mcp>=1.18.0",
    "pydantic>=2.12.3",
    "pypdf2>=3.0.1",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn>=0.37.0",
]
